--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -4,7 +4,7 @@ screen_off_devices: led
 
 [printer Neptune 3 Pro]
 camera_url: http://127.0.0.1/webcam/?action=stream
-power_devices: printer, light
+power_devices: printer
 
 [preheat PLA]
 extruder: 200
