--- a/lib/bed_utils.cfg
+++ b/lib/bed_utils.cfg
@@ -37,14 +37,15 @@ horizontal_move_z: 5.
 speed: 150.
 screw_thread: CW-M4
 
-[gcode_macro BED_SCREW_ADJUST]
-gcode:
-    G28
-    SCREWS_TILT_CALCULATE
-    M84
+# Used these before I drilled the threads out and installed wheels. Disabled motors after the STC moves so i could lift the build sheet to turn the screws.
+#[gcode_macro BED_SCREW_ADJUST]
+#gcode:
+#    G28
+#    SCREWS_TILT_CALCULATE
+#    M84
 
-[gcode_macro BED_MESH_PROBE]
-gcode:
-    G28
-    BED_MESH_CALIBRATE
-    M84
+#[gcode_macro BED_MESH_PROBE]
+#gcode:
+#    G28
+#    BED_MESH_CALIBRATE
+#    M84
