variable updates and random tinkering

--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,10 +1,12 @@
 [main]
+job_complete_timeout: 120
+job_error_timeout: 240
 screen_on_devices: led
 screen_off_devices: led
 
 [printer Neptune 3 Pro]
 camera_url: http://127.0.0.1/webcam/?action=stream
-power_devices: printer, light
+power_devices: printer
 
 [preheat PLA]
 extruder: 200
