--- a/lib/km.cfg
+++ b/lib/km.cfg
@@ -4,7 +4,7 @@
 [gcode_macro _km_options]
 # These are examples of some likely customizations:
 # Any sheets in the below list will be available with a configurable offset.
-#variable_bed_surfaces: ['en3p','black','smooth','texture']
+variable_bed_surfaces: ['0.4gold','0.6gold','0.4black','0.6black']
 # Length (in mm) of filament to load (bowden tubes will be longer).
 variable_load_length: 50.0
 # Hide the Octoprint LCD menu since I don't use it.
