--- a/printer.cfg
+++ b/printer.cfg
@@ -20,7 +20,7 @@ value: 0.5
 [printer]
 kinematics: cartesian
 max_velocity: 500
-max_accel: 4100
+max_accel: 2600 #4100
 max_z_velocity: 15
 max_z_accel: 100
 square_corner_velocity: 5
@@ -86,7 +86,7 @@ rotation_distance: 7.776
 #pid_kd = 124.081
 # Calibrate PA: https://www.klipper3d.org/Pressure_Advance.html
 # pressure_advance
-pressure_advance: 0.02
+pressure_advance: 0.036
 
 [heater_bed]
 heater_pin: PA5
@@ -118,15 +118,15 @@ z_hop: 10
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 31.571
-#*# pid_ki = 1.632
-#*# pid_kd = 152.724
+#*# pid_kp = 30.733
+#*# pid_ki = 1.529
+#*# pid_kd = 154.435
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 68.046
-#*# pid_ki = 1.065
-#*# pid_kd = 1087.030
+#*# pid_kp = 67.763
+#*# pid_ki = 1.008
+#*# pid_kd = 1138.413
 #*#
 #*# [skew_correction my_skew_profile]
 #*# xy_skew = -0.003403074082193367
@@ -135,26 +135,26 @@ z_hop: 10
 #*#
 #*# [input_shaper]
 #*# shaper_type_y = 2hump_ei
-#*# shaper_freq_y = 59.8
-#*# shaper_type_x = ei
-#*# shaper_freq_x = 56.4
+#*# shaper_freq_y = 58.8
+#*# shaper_type_x = 2hump_ei
+#*# shaper_freq_x = 48.4
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.032500, 0.006250, 0.007500
-#*# 	0.028750, 0.008750, 0.001250
-#*# 	0.008750, 0.012500, 0.027500
+#*# 	  0.002500, -0.005000, -0.001250
+#*# 	  0.015000, 0.021250, 0.001250
+#*# 	  0.000000, 0.117500, 0.031250
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 75.08
-#*# max_x = 159.9
-#*# min_y = 75.08
-#*# max_y = 159.9
+#*# min_x = 79.9
+#*# max_x = 140.07
+#*# min_y = 79.9
+#*# max_y = 140.07
 #*#
 #*# [probe]
-#*# z_offset = 0.305
+#*# z_offset = 0.405
