cleaning up config, trying to solve klipperscreen issues relating to bound_services in moonraker power device

--- a/lib/power.cfg
+++ b/lib/power.cfg
@@ -1,6 +1,6 @@
 [idle_timeout]
 gcode:
-  _KM_IDLE_TIMEOUT # This line must be in your idle_timeout section.
+  _KM_IDLE_TIMEOUT
   {% if not printer.pause_resume.is_paused %}
   UPDATE_DELAYED_GCODE ID=delayed_printer_off DURATION=60
   {% endif %}
