--- a/printer.cfg
+++ b/printer.cfg
@@ -8,7 +8,6 @@
 # Copy the file out/ZNP_ROBIN_NANO.bin to an SD card and then restart the printer with that SD card.
 # See docs/Config_Reference.md for a description of parameters.
 
-#[include km.cfg]
 [include lib/*.cfg]
 
 [output_pin LED]
@@ -20,13 +19,10 @@ value: 0.5
 [printer]
 kinematics: cartesian
 max_velocity: 500
-max_accel: 2600 #4100
+max_accel: 2600
 max_z_velocity: 15
 max_z_accel: 100
 square_corner_velocity: 5
-# Use those higher values just to configure Input Shaper 
-#max_accel: 10000
-#max_accel_to_decel: 10000
 
 [stepper_x]
 step_pin: !PC12
@@ -59,7 +55,7 @@ rotation_distance: 8
 microsteps: 16
 position_min: -2
 position_max: 280
-endstop_pin: probe:z_virtual_endstop # Use Z- as endstop
+endstop_pin: probe:z_virtual_endstop
 homing_speed: 5.0
 
 [extruder]
@@ -76,16 +72,7 @@ sensor_pin: PC1
 min_temp: 0
 max_temp: 280
 min_extrude_temp: 180
-# Calibrate E-Steps https://www.klipper3d.org/Rotation_Distance.html#calibrating-rotation_distance-on-extruders
 rotation_distance: 7.776
-# Calibrate PID: https://www.klipper3d.org/Config_checks.html#calibrate-pid-settings
-#  - Example: PID_CALIBRATE HEATER=extruder TARGET=200
-#control = pid
-#pid_kp = 30.356
-#pid_ki = 1.857
-#pid_kd = 124.081
-# Calibrate PA: https://www.klipper3d.org/Pressure_Advance.html
-# pressure_advance
 pressure_advance: 0.036
 
 [heater_bed]
@@ -94,12 +81,6 @@ sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC0
 max_temp: 110
 min_temp: 0
-# Calibrate PID: https://www.klipper3d.org/Config_checks.html#calibrate-pid-settings
-#  - Example: PID_CALIBRATE HEATER=heater_bed TARGET=60
-#control = pid
-#pid_kp = 64.230
-#pid_ki = 0.723
-#pid_kd = 1425.905
 
 [heater_fan hotend_fan]
 pin: PB0
