cannot get klipperscreen to accept bound_services, added job_queue_transition_delay time to try to resolve. no dice

--- a/lib/bed_utils.cfg
+++ b/lib/bed_utils.cfg
@@ -2,8 +2,8 @@
 pin: ^PA8
 speed: 2
 lift_speed: 15
-x_offset: -27
-y_offset: 18
+x_offset: -28
+y_offset: 20
 samples: 2
 samples_result: average
 samples_tolerance: 0.05
@@ -15,12 +15,13 @@ speed: 300
 horizontal_move_z: 3.0
 mesh_min: 30,30
 mesh_max: 205,205
+mesh_pps: 2,2
 probe_count: 6,6
 algorithm: bicubic
 bicubic_tension: 0.2
-#fade_start: 1
-#fade_end: 10
-#fade_target: 0
+fade_start: 1
+fade_end: 10
+fade_target: 0
 
 [screws_tilt_adjust]
 screw1: 58, 177
