--- a/lib/km.cfg
+++ b/lib/km.cfg
@@ -27,6 +27,7 @@ filename: ~/printer_data/config/variables.cfg # UPDATE THIS FOR YOUR PATH!!!
 
 [virtual_sdcard]
 path: /home/james/printer_data/gcodes # UPDATE THIS FOR YOUR PATH!!!
+on_error_gcode: CANCEL_PRINT
 
 [display_status]
 
