--- a/moonraker.conf
+++ b/moonraker.conf
@@ -101,6 +101,7 @@ object_name: output_pin LED
 
 [job_queue]
 load_on_startup: True
+job_transition_delay: 5
 
 [file_manager]
 queue_gcode_uploads: True
@@ -109,7 +110,7 @@ enable_object_processing: True
 [timelapse]
 fw_retract: True
 
-[webcam print_cam]
+[webcam Default]
 location: printer
 #icon:
 #enabled: True
