--- a/printer.cfg
+++ b/printer.cfg
@@ -79,6 +79,7 @@ pressure_advance: 0.036
 heater_pin: PA5
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC0
+pwm_cycle_time: 0.0166
 max_temp: 110
 min_temp: 0
 
@@ -120,22 +121,22 @@ z_hop: 10
 #*# shaper_type_x = 2hump_ei
 #*# shaper_freq_x = 48.4
 #*#
+#*# [probe]
+#*# z_offset = 0.405
+#*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.002500, -0.005000, -0.001250
-#*# 	  0.015000, 0.021250, 0.001250
-#*# 	  0.000000, 0.117500, 0.031250
-#*# x_count = 3
+#*# 	  0.000000, 0.018750, 0.003750, -0.003750, 0.037500
+#*# 	  0.012500, 0.035000, 0.027500, 0.018750, 0.020000
+#*# 	  0.010000, 0.032500, 0.036250, 0.042500, -0.020000
+#*# x_count = 5
 #*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 79.9
-#*# max_x = 140.07
-#*# min_y = 79.9
-#*# max_y = 140.07
-#*#
-#*# [probe]
-#*# z_offset = 0.405
+#*# min_x = 30.4
+#*# max_x = 189.56
+#*# min_y = 87.9
+#*# max_y = 132.07999999999998
