using delayed gcode to restart ks on klipper start until ks is fixed. requires gcode shell command addon in kiauh advanced section.

--- a/printer.cfg
+++ b/printer.cfg
@@ -70,8 +70,8 @@ heater_pin: PA6
 sensor_type: ATC Semitec 104NT-4-R025H42G
 sensor_pin: PC1
 min_temp: 0
-max_temp: 280
-min_extrude_temp: 180
+max_temp: 300
+min_extrude_temp: 210
 rotation_distance: 7.776
 pressure_advance: 0.036
 
@@ -127,16 +127,16 @@ z_hop: 10
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.000000, 0.018750, 0.003750, -0.003750, 0.037500
-#*# 	  0.012500, 0.035000, 0.027500, 0.018750, 0.020000
-#*# 	  0.010000, 0.032500, 0.036250, 0.042500, -0.020000
-#*# x_count = 5
+#*# 	  0.001250, 0.002500, 0.003750
+#*# 	  0.015000, 0.022500, 0.011250
+#*# 	  0.022500, 0.027500, 0.023750
+#*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 30.4
-#*# max_x = 189.56
-#*# min_y = 87.9
-#*# max_y = 132.07999999999998
+#*# min_x = 86.91
+#*# max_x = 133.09
+#*# min_y = 92.56
+#*# max_y = 127.43
