commiting changes before hardware migration. added pause_inlay custom gcode to present plate during pause. general tinkering and updated network addresses after network reconfig.

--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -5,7 +5,7 @@ screen_on_devices: led
 screen_off_devices: led
 
 [printer Neptune 3 Pro]
-camera_url: http://127.0.0.1/webcam/?action=stream
+#camera_url: http://127.0.0.1/webcam/?action=stream
 power_devices: printer
 
 [preheat PLA]
