more updates and tinkering, getting ready for another reinstall

--- a/lib/pimcu.cfg
+++ b/lib/pimcu.cfg
@@ -1,5 +1,5 @@
 
-[temperature_sensor le_potato]
+[temperature_sensor rpi4]
 sensor_type: temperature_host
 #min_temp: 10
 #max_temp: 105
@@ -15,11 +15,11 @@ sensor_adc1: 0.210317
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 restart_method: command
 
-[mcu potato]
+[mcu pi]
 serial: /tmp/klipper_host_mcu
 
 [adxl345]
-cs_pin: potato:None
+cs_pin: pi:None
 
 [resonance_tester]
 accel_chip: adxl345
